tests/baselines/reference/destructuringContextualBindingStackOverflow.errors.txt
destructuringContextualBindingStackOverflow.ts(1,7): error TS2322: Type '{ c: number; f: any; }' is not assignable to type 'string | number | symbol'.
destructuringContextualBindingStackOverflow.ts(1,9): error TS2339: Property 'c' does not exist on type 'string | number | symbol'.
destructuringContextualBindingStackOverflow.ts(1,12): error TS2339: Property 'f' does not exist on type 'string | number | symbol'.
destructuringContextualBindingStackOverflow.ts(1,52): error TS2448: Block-scoped variable 'f' used before its declaration.


==== destructuringContextualBindingStackOverflow.ts (4 errors) ====
    const { c, f }: string | number | symbol = { c: 0, f };
          ~~~~~~~~
!!! error TS2322: Type '{ c: number; f: any; }' is not assignable to type 'string | number | symbol'.
            ~
!!! error TS2339: Property 'c' does not exist on type 'string | number | symbol'.
               ~
!!! error TS2339: Property 'f' does not exist on type 'string | number | symbol'.
                                                       ~
!!! error TS2448: Block-scoped variable 'f' used before its declaration.
!!! related TS2728 destructuringContextualBindingStackOverflow.ts:1:12: 'f' is declared here.
    